feat: tracks get
